<resources>
    <string name="app_name">Recipeeer</string>
    <string name="sign_in_text">Sign in with Google</string>
    <string name="open">Open nav drawer</string>
    <string name="close">Close nav drawer</string>
    <string name="create_recipe_name">Name:</string>
    <string name="upload_image_button_text">Upload image</string>
    <string name="create_recipe_preparation_time">Preparation time:</string>
    <string name="create_recipe_minutes_text">min</string>
    <string name="create_recipe_ingredients">Ingredients:</string>
    <string name="add_ingredient_button">Add</string>
    <string name="create_recipe_instructions">Instructions:</string>
    <string name="save_new_recipe_description">Save new recipe</string>
    <string name="save_recipe_button">Save</string>
    <string name="recipe_details_name">Recipe name</string>
    <string name="publisher">Publisher:</string>
    <string name="recipe_details_preparation_time">Preparation time:</string>
    <string name="details_time_in_minutes">Time in minutes</string>
    <string name="details_ingredients">Ingredients:</string>
    <string name="details_instructions">Instructions:</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="profile_name">Name:</string>
    <string name="profile_gender">Gender:</string>
    <string name="hint_search_for_recipe">Search for recipe</string>
    <string name="search_button">Search</string>
    <string name="quick_search">Quick search</string>
    <string name="drawer_name">Name</string>
    <string name="recipe_item_preparation_time">Preparation time:</string>
    <string name="chicken">Chicken</string>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Unknown</item>
    </string-array>
</resources>
