<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_for_recipe"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="40"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search_black"
            android:text="@string/search_button"
            android:background="@drawable/my_recipe_item"
            android:drawablePadding="10dp"
            android:paddingHorizontal="20dp"
            android:layout_gravity="center"
            android:drawableTint="@color/common_google_signin_btn_text_light"
            android:enabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_search"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_quickSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/recyclerview_quick_search_item">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</FrameLayout>