<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".createRecipe.CreateRecipeActivity"
    android:background="@color/colorAppBackground">

    <com.example.recipeeer.createRecipe.CustomScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/forAnchor">

            <include layout="@layout/layout_action_bar"/>

            <LinearLayout
                android:id="@+id/createRecipeFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/create_recipe_name"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editName"
                        android:maxLines="1"
                        android:maxLength="50"
                        android:inputType="text"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/img_not_found"
                    android:scaleType="fitCenter"
                    android:id="@+id/recipeImage"
                    android:layout_marginBottom="10dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/uploadImage_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_image_button_text"
                    android:paddingHorizontal="5dp"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:background="@drawable/sign_in_btn"
                    android:tint="@android:color/background_light"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_file_upload_black"
                    android:layout_marginBottom="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:text="@string/create_recipe_preparation_time"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_marginStart="5dp"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:id="@+id/editTime"
                        android:textAlignment="textEnd"/>

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/create_recipe_minutes_text"
                        android:textSize="15sp"/>

                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="@string/create_recipe_ingredients"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ingredients"
                            android:orientation="vertical">
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="8dp">

                            <EditText
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/editIngredient"
                                android:maxLines="1"
                                android:inputType="text"
                                android:layout_marginStart="15dp"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/addIngredient"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:text="@string/add_ingredient_button"
                                android:enabled="false"
                                android:textColor="@color/colorToolbar"
                                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>


                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:text="@string/create_recipe_instructions"
                    android:textSize="20sp"
                    android:textStyle="bold"/>


                <EditText
                    android:id="@+id/editInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="270dp"
                    android:layout_marginBottom="?actionBarSize"
                    android:ems="10"
                    android:inputType="textAutoComplete|textAutoCorrect|textMultiLine|text"
                    android:scrollbars="vertical"
                    />


            </LinearLayout>
        </LinearLayout>
    </com.example.recipeeer.createRecipe.CustomScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_new_recipe_description"
        android:text="@string/save_recipe_button"
        app:icon="@drawable/ic_save_black"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        app:layout_anchor="@id/forAnchor"
        app:layout_anchorGravity="bottom|center"
        android:enabled="false"
        android:id="@+id/saveRecipe"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>